--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,56 @@
     <title>ERR Fitness {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-extend fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
+        <a class="navbar-brand nav-logo-font text-uppercase text-white" href="{% url 'home' %}">
+            <h2 class="display">ERR Fitness</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="list-inline-item dropdown">
+                  <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div >
+                          <p class="my-0">My Account</p>
+                      </div>
+                  </a>
+                  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                      {% if request.user.is_authenticated %}
+                          {% if request.user.is_superuser %}
+                              <a href="" class="dropdown-item">Product Management</a>
+                          {% endif %}
+                          <a href="" class="dropdown-item">My Profile</a>
+                          <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                      {% else %}
+                          <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                          <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                      {% endif %}
+                  </div>
+                </li>
+                <li class="list-inline-item">
+                  <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="">
+                      <div>
+                          <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                          <p class="my-0">
+                              {% if grand_total %}
+                                  ${{ grand_total|floatformat:2 }}
+                              {% else %}
+                                  $0.00
+                              {% endif %}
+                          </p>
+                      </div>
+                  </a>
+              </li>
+            </ul>
+
+
+        </div>
+    </nav>
+    </header>
    
     {% if messages %}
         <div class="message-container"></div>
