completed homepage header and css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,21 +21,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="carousel-img w-100" src="/media/exercise.jpg" alt="#">
+                        <img class="carousel-img w-100" src="/media/gym_carousel1.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Exercise</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Lorem Ipsum</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="carousel-img w-100" src="/media/nutrition.jpg" alt="#">
+                        <img class="carousel-img w-100" src="/media/gym_carousel2.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Nutrition</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Lorem Ipsum</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="carousel-img w-100" src="/media/recovery.jpg" alt="#">
+                        <img class="carousel-img w-100" src="/media/gym_carousel3.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Recovery</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Lorem Ipsum</h2>
                         </div>
                     </div>
                 </div>
@@ -48,6 +48,122 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="container my-2 py-2">
+    <div class="row text-center py-2">
+        <div class="col-12 text-center">
+            <h2 class="display-5 text-uppercase">
+                <i class="fas fa-balance-scale-left"></i> ERR Fitness
+            </h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p class="text-justify">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="container my-2 py-2">
+    <div class="row">
+        <div class="col-12 d-md-none">
+            <h3 class="display-5 text-center">
+                Gyms Nationwide
+            </h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <img class="gym-service-img" src="/media/gyms.jpg" alt="#">
+        </div>
+        <div class="col-12 col-md-6">
+            <h3 class="display-5 d-none d-md-block">
+                Gyms Nationwide
+            </h3>
+            <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container my-2 py-2">
+    <div class="row">
+        <div class="col-12 d-md-none">
+            <h3 class="display-5 text-center">
+                Workout & Nutritional Plans
+            </h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <h3 class="display-5 d-none d-md-block">
+                Workout & Nutrional Plans
+            </h3>
+            <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
+        </div>
+        <div class="col-12 col-md-6">
+            <img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#">
+        </div>
+    </div>
+</div>
+<div class="container my-2 py-2">
+    <div class="row">
+        <div class="col-12 d-md-none">
+            <h3 class="display-5 text-center">
+                ERR Community Chat
+            </h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <img class="gym-service-img" src="/media/social_chat.jpg" alt="#">
+        </div>
+        <div class="col-12 col-md-6">
+            <h3 class="display-5 d-none d-md-block">
+                ERR Community Chat
+            </h3>
+            <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container my-2 py-2">
+    <div class="row">
+        <div class="col-12 d-md-none">
+            <h3 class="display-5 text-center">
+                ERR Store
+            </h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <h3 class="display-5 d-none d-md-block">
+                ERR Store
+            </h3>
+            <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
+        </div>
+        <div class="col-12 col-md-6">
+            <img class="gym-service-img" src="/media/gym_store.jpg" alt="#">
         </div>
     </div>
 </div>
