--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
   <body>
     <header class="container-extend fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-        <a class="navbar-brand nav-logo-font text-uppercase text-white" href="{% url 'home' %}">
-            <h2 class="display">ERR Fitness</h2>
+        <a class="navbar-brand  text-uppercase text-white" href="{% url 'home' %}">
+            <h2 class="display"><i class="fas fa-balance-scale-left"></i> ERR Fitness</h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,8 +72,6 @@
                           <p class="my-0">
                               {% if grand_total %}
                                   ${{ grand_total|floatformat:2 }}
-                              {% else %}
-                                  $0.00
                               {% endif %}
                           </p>
                       </div>
