--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <img class="gym-service-img" src="/media/gyms.jpg" alt="#">
+            <a href="#"><img class="gym-service-img" src="/media/gyms.jpg" alt="#"></a>
         </div>
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
@@ -115,7 +115,7 @@
             </p>
         </div>
         <div class="col-12 col-md-6">
-            <img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#">
+            <a href="#"><img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#"></a>
         </div>
     </div>
 </div>
@@ -129,7 +129,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <img class="gym-service-img" src="/media/social_chat.jpg" alt="#">
+            <a href="#"><img class="gym-service-img" src="/media/social_chat.jpg" alt="#"></a>
         </div>
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
@@ -163,7 +163,7 @@
             </p>
         </div>
         <div class="col-12 col-md-6">
-            <img class="gym-service-img" src="/media/gym_store.jpg" alt="#">
+            <a href="#"><img class="gym-service-img" src="/media/gym_store.jpg" alt="#"></a>
         </div>
     </div>
 </div>
