added products views and templates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -163,7 +163,7 @@
             </p>
         </div>
         <div class="col-12 col-md-6">
-            <a href="#"><img class="gym-service-img" src="/media/gym_store.jpg" alt="#"></a>
+            <a href="{% url 'products' %}"><img class="gym-service-img" src="/media/gym_store.jpg" alt="#"></a>
         </div>
     </div>
 </div>
