--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,3 +22,46 @@ html {
     object-fit: cover;
     object-position: center;
 }
+
+/* Products page */
+.card-img-top{
+    height: 20vh;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.slider-wrap {
+    position: relative;
+    overflow: hidden;
+    height: 35vh;
+}
+
+.slider-main {
+    position: absolute;
+    width: 150%;
+}
+
+.item {
+    width: 350px;
+    display: inline-block;
+    position: relative;
+    margin: 4px;
+}
+
+.slider-btn {
+    border: none;
+    outline: none;
+    font-size: 24px;
+    background-color: rgb(76, 76, 241);
+    border-radius: 15%;
+    color: #fff;
+    padding: 2px 30px;
+    margin: 0 10px;
+    transition: 0.4s;
+}
+
+.slider-btn:hover {
+    background-color: #fff;
+    color: rgb(76, 76, 241);
+}
