--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,3 +65,21 @@ html {
     background-color: #fff;
     color: rgb(76, 76, 241);
 }
+
+.image-container {
+    height: 40vh;
+}
+
+.product-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 350px) {
+    .header-container {
+        padding-top: 100px;
+    }
+}
