--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,6 +47,7 @@
             <h3>Reviews</h3>
             <div class="row">
                 <div class="col-12 col-sm-6 text-left">
+                    
                     {% if product_reviews %}
                         {% for review in product_reviews %}
                         <div class="card-body">
@@ -64,26 +65,9 @@
                         <a href="{% url 'products' %}" class="btn-danger btn-lg">Add comment</a>
                         <a href="{% url 'products' %}" class="btn-primary btn-lg">Return to Store</a>
                     {% endif %}
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 text-left">
-            <h3>Leave a review</h3>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                        {% if user.is_authenticated %}
-                            <p>Posting as: {{ user.username }}</p>
-                            <form method="post">
-                                <p>
-                                    {{ review_form.comment }}
-                                </p>
-                                <p>
-                                    Rating {{ review_form.rating }}
-                                </p>
-                                {% csrf_token %}
-                                <button type="submit" class="btn-info btn-lg">Submit</button>
-                            </form>
-                        {% endif %}
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'add_review' %}" class="btn btn-primary btn-lg">Add a Review</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
