--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -23,20 +23,19 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6 text-left">
+        <div class="col-12 text-left">
             <h3>Leave a review</h3>
             <div class="row">
                 <div class="col-12 col-md-6">
                     {% if user.is_authenticated %}
-                        <p>Posting as: {{ user.username }} {{ product.name }}</p>
-                        <form method="post">
-                            {% csrf_token %}
-                            <p>
+                        <p>Posting as: {{ user.username }}</p>
+                        <div class="form-group">
+                            <form method="post">
+                                {% csrf_token %}
                                 {{ form.as_p }}
-                            </p>
-                            
-                            <button class="btn-primary">Submit</button>
-                        </form>
+                                <button class="btn-primary">Submit</button>
+                            </form>
+                        </div>
                     {% endif %}
                 </div>
             </div>
@@ -45,3 +44,10 @@
 </div>
 {% endblock %}
 
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        var name = "{{ user.id }}"
+        document.getElementById("reviewer_name").value = name;
+    </script>
+{% endblock %}
