--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -43,11 +43,19 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6 text-left">
+        <div class="col-6 text-left">
             <h3>Reviews</h3>
+        </div>
+        <div class="col-6 text-left">
+            {% if user.is_authenticated %}
+            <a href="{% url 'add_review' product.id %}" class="btn btn-primary btn-lg">Leave a Review</a>
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6 text-left">
             <div class="row">
                 <div class="col-12 col-sm-6 text-left">
-                    
                     {% if product_reviews %}
                         {% for review in product_reviews %}
                         <div class="card-body">
@@ -62,11 +70,6 @@
                         {% endfor %}
                     {% else %}
                         <p class="lead mb-5">There are no reviews for this product.</p>
-                        <a href="{% url 'products' %}" class="btn-danger btn-lg">Add comment</a>
-                        <a href="{% url 'products' %}" class="btn-primary btn-lg">Return to Store</a>
-                    {% endif %}
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'add_review' %}" class="btn btn-primary btn-lg">Add a Review</a>
                     {% endif %}
                 </div>
             </div>
