--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,8 @@
                   <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="{% url 'view_bag' %}">
                       <div>
                           <p class="my-0">
-                              {% if grand_total %}
-                                  ${{ grand_total|floatformat:2 }}
+                              {% if total_cost %}
+                                  My Order ${{ total_cost|floatformat:2 }}
                               {% endif %}
                           </p>
                       </div>
