--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -10,22 +10,78 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font">Current Order</h2>
-            <hr class="w-75 mb-1">
         </div>
     </div>
     <div class="row">
         <div class="col">
             {% if bag_items %}
-                <div class="table">
-                    {{ bag_items }}
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Product Info</th>
+                                <th scope="col"></th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Qty</th>
+                                <th scope="col">Subtotal</th>
+                            </tr>
+                        </thead>
+                        {% for item in bag_items %}
+                        <tr class="order-row">
+                            <td class="p-3 w-25">
+                                <img class="img-shopping-bag" src="{{ item.product.image.url }}">
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">${{ item.product.price }}</p>
+                            </td>
+                            <td class="py-3 w-25">
+                                <p class="my-0">{{ item.quantity }}</p>
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">€{{ item.product.price }}</p>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        <tr>
+                            <td colspan="5" class="pt-5 text-right">
+                                <h6>Standard Delivery Charge: €{{ delivery_charge|floatformat:2 }}</h6>
+                                <h5><strong>Total Cost: €{{ total_cost|floatformat:2 }}</strong></h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5" class="text-right">
+                                <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <a href="#" class="btn btn-warning btn-lg">
+                                    <span class="text-uppercase">Secure Checkout</span>
+                                    <span class="icon">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             {% else %}
                 <h2 class="logo-font">Your bag is empty.</h2>
-                <a href="{% url 'products' %}" class="btn btn-dark btn-lg">Return to Store</a>
+                <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">Return to Store</span>
+                </a>
             {% endif %}
         </div>
     </div>
