--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,7 +42,23 @@
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-dark" 
+                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-minus"></i>
+                                        </span>
+                                    </div>
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-dark"
+                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-plus"></i>
+                                        </span>
+                                    </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -78,19 +94,19 @@
             <div class="row">
                 <div class="col-12 col-sm-6 text-left">
                     {% if product_reviews %}
-                        {% for review in product_reviews %}
-                        <div class="card-body">
-                            <p class="font-weight-bold">
-                                {{ review.review_by }}
-                                <span class=" text-muted font-weight-normal">
-                                    {{ review.created_on }}
-                                </span>
-                            </p>
-                            {{ review.comment | safe }}
-                        </div>
-                        {% endfor %}
+                    {% for review in product_reviews %}
+                    <div class="card-body">
+                        <p class="font-weight-bold">
+                            {{ review.review_by }}
+                            <span class=" text-muted font-weight-normal">
+                                {{ review.created_on }}
+                            </span>
+                        </p>
+                        {{ review.comment | safe }}
+                    </div>
+                    {% endfor %}
                     {% else %}
-                        <p class="lead mb-5">There are no reviews for this product.</p>
+                    <p class="lead mb-5">Currently there are no reviews for this product.</p>
                     {% endif %}
                 </div>
             </div>
@@ -99,3 +115,7 @@
 </div>
 {% endblock %}
 
+{% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
+{% endblock %}
