--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -43,10 +44,22 @@
                                 <p class="my-0">${{ item.product.price }}</p>
                             </td>
                             <td class="py-3 w-25">
-                                <p class="my-0">{{ item.quantity }}</p>
+                                <form method="POST" action="{}">
+                                    {% csrf_token %}
+                                    <input class="form-control form-control-sm qty_input" type="number"
+                                    name="quantity" value="{{ item.quantity }}"
+                                    data-item_id="{{ item.item_id }}"
+                                    id="id_qty_{{ item.item_id }}" disabled>
+                                </form>
                             </td>
                             <td class="py-3">
-                                <p class="my-0">€{{ item.product.price }}</p>
+                                <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}
+                                    <a class="remove-item text-dark mx-3" id="remove_{{ item.item_id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </span>
+                                    </a>
+                                </p>
                             </td>
                         </tr>
                         {% endfor %}
@@ -86,4 +99,21 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.remove-item').click(function(e) {
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            var url = `/bag/remove/${itemId}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken,}
+
+            $.post(url, data)
+            .done(function() {
+                location.reload();
+            })
+        })
+    </script>
 {% endblock %}
