added google map embeded iframe of gym locations to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -63,7 +63,8 @@
     <div class="row">
         <div class="col-12">
             <p class="text-justify">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
                 maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
                 recusandae sequi iste.
             </p>
@@ -81,14 +82,15 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <a href="#"><img class="gym-service-img" src="/media/gyms.jpg" alt="#"></a>
+            <iframe class="gym-service-img" src="https://www.google.com/maps/d/u/0/embed?mid=1us-M2IRMS8pWRVo_P1Bg4YKBMTABgq4&ehbc=2E312F"></iframe>
         </div>
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
                 Gyms Nationwide
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
                 maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
                 recusandae sequi iste.
             </p>
@@ -109,7 +111,8 @@
                 Workout & Nutrional Plans
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
                 maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
                 recusandae sequi iste.
             </p>
@@ -136,7 +139,8 @@
                 ERR Community Chat
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
                 maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
                 recusandae sequi iste.
             </p>
@@ -157,7 +161,8 @@
                 ERR Store
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque, labore
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
                 maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
                 recusandae sequi iste.
             </p>
