added notification css, shopping bag review and additional messages

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="col-12 d-md-none">
             <h3 class="display-5 text-center">
-                Workout & Nutritional Plans
+                Workout & Nutrition Plans
             </h3>
         </div>
     </div>
@@ -126,49 +126,24 @@
     <div class="row">
         <div class="col-12 d-md-none">
             <h3 class="display-5 text-center">
-                ERR Community Chat
-            </h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-6">
-            <a href="#"><img class="gym-service-img" src="/media/social_chat.jpg" alt="#"></a>
-        </div>
-        <div class="col-12 col-md-6">
-            <h3 class="display-5 d-none d-md-block">
-                ERR Community Chat
-            </h3>
-            <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
-            </p>
-        </div>
-    </div>
-</div>
-<div class="container my-2 py-2">
-    <div class="row">
-        <div class="col-12 d-md-none">
-            <h3 class="display-5 text-center">
                 ERR Store
             </h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-md-6">
-            <h3 class="display-5 d-none d-md-block">
-                ERR Store
-            </h3>
-            <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
-            </p>
-        </div>
         <div class="col-12 col-md-6">
             <a href="{% url 'products' %}"><img class="gym-service-img" src="/media/gym_store.jpg" alt="#"></a>
+        </div>
+        <div class="col-12 col-md-6">
+            <h3 class="display-5 d-none d-md-block">
+                ERR Store
+            </h3>
+            <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
+                labore
+                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
+                recusandae sequi iste.
+            </p>
         </div>
     </div>
 </div>
