--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -94,8 +94,8 @@
                 <fieldset class="px-3 mb-5 legend-border">
                     <legend class="fieldset-label small px-2 w-auto">Payment</legend>
                     <div class="mb-3" id="card-element"></div>
-
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
 
                 <div class="submit-button text-right mt-5 mb-2">
