added workout_plan app. models and fixtures

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -108,7 +108,7 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
-                Workout & Nutrional Plans
+                Workout & Nutrion Plans
             </h3>
             <p class="d-none d-md-block">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
@@ -118,7 +118,7 @@
             </p>
         </div>
         <div class="col-12 col-md-6">
-            <a href="#"><img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#"></a>
+            <a href="{% url 'workout_plan' %}"><img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#"></a>
         </div>
     </div>
 </div>
