--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -101,14 +101,14 @@
     <div class="row">
         <div class="col-12 d-md-none">
             <h3 class="display-5 text-center">
-                Workout & Nutrition Plans
+                Gym Classes
             </h3>
         </div>
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
-                Workout & Nutrion Plans
+                Gym Classes
             </h3>
             <p class="d-none d-md-block">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
