added home page content, updated next and prev button style for workout plan page

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -54,8 +54,8 @@
     </div>
     <div class="row">
         <div class="col text-center">
-            <button class="slider-btn" id="prevEquip"><i class="fas fa-caret-left"></i></button>
-            <button class="slider-btn" id="nextEquip"><i class="fas fa-caret-right"></i></button>
+            <button class="btn btn-warning px-3 mx-2" id="prevEquip"><i class="fas fa-chevron-left"></i> Prev</button>
+            <button class="btn btn-warning px-3 mx-2" id="nextEquip">Next <i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
 </div>
@@ -94,8 +94,8 @@
     </div>
     <div class="row">
         <div class="col text-center">
-            <button class="slider-btn" id="prevSupp"><i class="fas fa-caret-left"></i></button>
-            <button class="slider-btn" id="nextSupp"><i class="fas fa-caret-right"></i></button>
+            <button class="btn btn-warning px-3 mx-2" id="prevSupp"><i class="fas fa-chevron-left"></i> Prev</button>
+            <button class="btn btn-warning px-3 mx-2" id="nextSupp">Next <i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
 </div>
