--- a/workout_plan/templates/workout_plan/workout_plan.html
+++ b/workout_plan/templates/workout_plan/workout_plan.html
@@ -40,8 +40,8 @@
 <div>
     <div class="row">
         <div class="col text-center">
-            <button class="slider-btn" id="prevPlan"><i class="fas fa-caret-left"></i></button>
-            <button class="slider-btn" id="nextPlan"><i class="fas fa-caret-right"></i></button>
+            <button class="btn btn-warning px-3 mx-2" id="prevPlan"><i class="fas fa-chevron-left"></i> Prev</button>
+            <button class="btn btn-warning px-3 mx-2" id="nextPlan">Next <i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
 </div>
