--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,24 +18,31 @@
                     <li data-target="#sliderIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#sliderIndicators" data-slide-to="1"></li>
                     <li data-target="#sliderIndicators" data-slide-to="2"></li>
+                    <li data-target="#sliderIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="carousel-img w-100" src="/media/gym_carousel1.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Lorem Ipsum</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Gyms Nationwide</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="carousel-img w-100" src="/media/gym_carousel2.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Lorem Ipsum</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Tailored Workouts</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="carousel-img w-100" src="/media/gym_carousel3.jpg" alt="#">
                         <div class="carousel-caption mb-3">
-                            <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Lorem Ipsum</h2>
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Gym Classes</h2>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="carousel-img w-100" src="/media/gym_store.jpg" alt="#">
+                        <div class="carousel-caption mb-3">
+                            <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Gym Store</h2>
                         </div>
                     </div>
                 </div>
@@ -62,12 +69,17 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <p class="text-justify">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
+            <p class="text-center">
+                Ireland's newest fitness community. ERR Fitness centers have all the latest equipment and are now open
+                nationwide. ERR Fitness has recently expanded with the launch of its e-commerce store providing both
+                supplement and equipment offers with next day delivery gauranteed.
             </p>
+            <ul class="list-inline text-center">
+                <li class="list-inline-item">Access to all gym classes</li>
+                <li class="list-inline-item">Personalised training plan</li>
+                <li class="list-inline-item">Access gyms nationwide</li>
+                <li class="list-inline-item">Online store</li>
+            </ul>
         </div>
     </div>
 </div>
@@ -82,17 +94,16 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <iframe class="gym-service-img" src="https://www.google.com/maps/d/u/0/embed?mid=1us-M2IRMS8pWRVo_P1Bg4YKBMTABgq4&ehbc=2E312F"></iframe>
+            <iframe class="gym-service-img"
+                src="https://www.google.com/maps/d/u/0/embed?mid=1us-M2IRMS8pWRVo_P1Bg4YKBMTABgq4&ehbc=2E312F"></iframe>
         </div>
         <div class="col-12 col-md-6">
             <h3 class="display-5 d-none d-md-block">
                 Gyms Nationwide
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
+                ERR Fitness is a chain of gyms nationwide. We have gyms in Dublin City, Limerick City, Cork City and
+                Galway City.
             </p>
         </div>
     </div>
@@ -111,14 +122,12 @@
                 Gym Classes
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
+                Members can take part in a range of gym classes ranging from heavy weights to cardio. Beginners to
+                advanced are welcome with classes structured so that everyone benefits.
             </p>
         </div>
         <div class="col-12 col-md-6">
-            <a href="{% url 'workout_plan' %}"><img class="gym-service-img" src="/media/nutrition_shake.jpg" alt="#"></a>
+            <a href="{% url 'workout_plan' %}"><img class="gym-service-img" src="/media/gym_carousel3.jpg" alt="#"></a>
         </div>
     </div>
 </div>
@@ -139,10 +148,8 @@
                 ERR Store
             </h3>
             <p class="d-none d-md-block">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum autem eveniet reprehenderit neque,
-                labore
-                maxime nulla excepturi ab minima dolorum nesciunt porro explicabo voluptatem eligendi quis repellendus,
-                recusandae sequi iste.
+                We are currently growing our online presence through the ERR Fitness e-commerce store offering a range of both
+                gym equipment and supplement options with next day delivery gauranteed.
             </p>
         </div>
     </div>
