--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,11 @@
     {% endif %}
 
     {% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
     {% endblock %}
 
     {% block content %}
