--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,11 +5,17 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+<div class="container-fluid">
+    <div class="row mt-3">
+      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+        <h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <input class="btn btn-warning" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        </form>
+      </div>
+    </div>
+</div>
 {% endblock %}
