--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -14,7 +14,7 @@
                 <hr class="mt-1 mb-3">
             </div>
         </div>
-        {% if total_cost %}
+        {% if total_cost and not on_profile_page %}
         <p class="bg-white text-dark py-1">Your Bag {{ product_count }}</p>
         <div class="bag-notification-wrapper">
         {% for item in bag_items %}
