--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -172,12 +172,21 @@
     </div>
 
     <div class="submit-button text-center mt-5 mb-2">
-        <a href="{% url 'products' %}" class="btn btn-dark">
+        {% if from_profile %}
+        <a href="{% url 'profile' %}" class="btn btn-warning">
+            <span class="icon">
+                <i class="fas fa-chevron-left"></i>
+            </span>
+            <span class="font-weight-bold">Order History</span>
+        </a>
+        {% else %}
+        <a href="{% url 'products' %}" class="btn btn-warning">
             <span class="icon">
                 <i class="fas fa-chevron-left"></i>
             </span>
             <span class="font-weight-bold">Keep Shopping</span>
         </a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
